--- a/projeto 1/assets/css/estilos.css
+++ b/projeto 1/assets/css/estilos.css
@@ -82,4 +82,119 @@ body {
     color: #81c4ff
 }
 
+.container-quem-somos .servico-texto-realce {
+    color: white;
+    font-weight: bold;
+}
+
+/*-----------------------------*/
+/* contatos*/
+
+.container-servico-contatos {
+    background-color: #082946;
+    padding: 80px;
+    text-align: center;
+}
+
+.container-servico-contatos .botoes-servico-contatos {
+    padding: 60px;
+    text-align: center;
+}
+
+.botoes-servico-contatos a{
+    display: block;
+    max-width: 200px;
+    text-decoration: none;
+    font-size: 1.2em;
+    background-color: #008eb9;
+    color: white;
+    padding: 20px 60px;
+    margin: 10px auto;
+    border-radius: 10px;
+
+}
+
+.botoes-servico-contatos a:hover {
+    background-color: white;
+    color: black;
+}
+
+/*-----------------------------*/
+/* Serviços*/
+
+.container-servicos {
+    background-color: #05192a;
+    font-size: 1.1em;
+    padding: 60px;
+    overflow: auto;
+}
+
+.container-servicos h1 {
+    font-size: 3em;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.container-servicos h3 {
+    color: #2697ff;
+    padding: 20px 0px;
+}
+
+.container-servicos article {
+    width: 40%;
+    margin: auto;
+    float: center;
+}
+
+.container-servicos li {
+    margin-bottom: 20px;
+    margin-left: 50px;
+    color: white;
+}
+
+/*-----------------------------*/
+/* Contatos*/
+
+.container-contatos {
+    background-color: #05192a;
+    padding: 80px;
+}
+
+.container-contatos h1 {
+    font-size: 3em;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.container-contatos h3 {
+    font-size: 1.5em;
+    font-weight: 100;
+    width: 40%;
+    margin: auto;
+    color: white;
+    margin-bottom: 20px;
+    border: 1px solid #105088;
+    background-color: #08253f;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.container-contatos .contatos {
+    display: block;
+    font-size: 2em;
+    text-decoration: none;
+    color: #00a2ff;
+    margin-bottom: 20px;
+}
+
+/*-----------------------------*/
+/* Rodapé*/
+
+footer {
+    text-align: center;
+    padding: 80px;
+    background-color: #02111f;
+    color: gray;
+}
+
 
