--- a/template basico CSS3/exemplo-6/estilo.css
+++ b/template basico CSS3/exemplo-6/estilo.css
@@ -5,7 +5,7 @@ h1 {
 }
 
 .sombra-1 {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0,.5);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0,.5); /*Permite que efeitos de sombra sejam aplicados ao texto do elemento*/
 }
 
 .sombra-2 {
