--- a/template basico CSS3/exemplo-7/estilo.css
+++ b/template basico CSS3/exemplo-7/estilo.css
@@ -1,4 +1,6 @@
-/* folha de extilo */
+/* folha de extilo CSS3*/
+
+/*permiter implementar uma fonte diferente das obituais*/
 
 @font-face {
     font-family: Orbitron;
