--- a/template basico CSS3/exemplo-8/estilo.css
+++ b/template basico CSS3/exemplo-8/estilo.css
@@ -1,5 +1,5 @@
 /* folha de estilo CSS3*/
 
 body {
-    font-family: 'Borel', cursive;
+    font-family: 'Borel', cursive; /*fonte importada do google fonts*/
 }
